examples/test/testpolicy9836.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9836
  namespace: namespace318
spec:
  podSelector:
    matchLabels:
      key0: value16
      key7: value37
      key19: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value6
      podSelector:
        matchLabels:
          key10: value11
